0.23.1	UNRELEASED

 * Support ``untracked_files="normal"`` argument to ``porcelain.status``,
   and make this the default.
   (Jelmer Vernooĳ, #835)

 * Fix KeyError when pulling from a shallow clone. Handle missing commits
   gracefully in graph traversal operations for shallow repositories.
   (Jelmer Vernooĳ, #813)

 * Return symrefs from ls_refs. (Jelmer Vernooĳ, #863)

 * Support short commit hashes in ``porcelain.reset()``.
   (Jelmer Vernooĳ, #1154)

 * Support dumb repository access.
   (Jelmer Vernooĳ, #1097)

 * Fix TypeError when cloning repositories with bytes paths on Windows.
   (Jelmer Vernooĳ, #973)

 * Support ``depth`` for local clones.
   (Jelmer Vernooĳ)

 * Add basic support for managing Notes. (Jelmer Vernooĳ)

 * Add basic ``cherry-pick`` subcommand.  (#1599, Jelmer Vernooĳ)

 * Add ``revert`` command to ``dulwich.porcelain`` and CLI.
   (#1599, Jelmer Vernooĳ)

 * Add annotate support as well as ``annotate`` and ``blame``
   commands.  (#245, Jelmer Vernooĳ)

 * Fix ``apply_delta`` to raise ``ApplyDeltaError`` instead of ``AssertionError``
   when the source buffer size doesn't match the delta header. This issue only
   affected the pure Python implementation when the Rust extension was not
   available. The Rust implementation already raised the correct exception.
   (#1606, Jelmer Vernooĳ)

 * Fix ``porcelain.reset --hard`` to properly delete files that don't exist in
   the target tree. Previously, when resetting to a remote branch, files deleted
   in the remote were not removed locally due to incorrect path normalization
   on Windows. (#840, Jelmer Vernooĳ)

 * Add support for includes in configuration files.
   (#1216, Jelmer Vernooĳ)

 * Support timeouts for HTTP client operations.  (Jelmer Vernooĳ)

 * Add support for ``reset --mixed`` and ``reset --soft`` modes in
   ``porcelain.reset()`` and the CLI. Mixed reset updates HEAD and index
   but leaves working tree unchanged. Soft reset only updates HEAD.
   (Jelmer Vernooĳ)
